[package]
name = "rusk-manifest"
version.workspace = true
edition.workspace = true
description = "Manifest parser for rusk project files"
license = "Apache-2.0"
repository = "https://github.com/harishsg993010/rusk"

[dependencies]
rusk-core = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
url = { workspace = true }
semver = { workspace = true }
pep440_rs = { workspace = true }
glob = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
