[package]
name = "rusk-materialize-python"
version.workspace = true
edition.workspace = true
description = "site-packages materializer for rusk"
license = "Apache-2.0"
repository = "https://github.com/harishsg993010/rusk"

[dependencies]
rusk-core = { workspace = true }
rusk-materialize = { workspace = true }
rusk-cas = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
zip = { workspace = true }
sha2 = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
