[package]
name = "rusk-observability"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Tracing, metrics, and diagnostics infrastructure for rusk"

[dependencies]
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
