[package]
name = "rusk-policy"
version.workspace = true
edition.workspace = true
description = "Policy engine with DSL for rusk trust policy evaluation"

[dependencies]
rusk-core = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
dashmap = { workspace = true }
glob = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
semver = { workspace = true }
serde_json = { workspace = true }
rusk-resolver = { workspace = true }
rusk-lockfile = { workspace = true }
rusk-revocation = { workspace = true }
