[package]
name = "rusk-registry-npm"
version.workspace = true
edition.workspace = true
description = "npm registry client for rusk"

[dependencies]
rusk-core = { workspace = true }
rusk-registry = { workspace = true }
rusk-tuf = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
async-trait = { workspace = true }
url = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
semver = { workspace = true }
reqwest = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
