[package]
name = "rusk-registry-pypi"
version.workspace = true
edition.workspace = true
description = "PyPI registry client for rusk"
license = "Apache-2.0"
repository = "https://github.com/harishsg993010/rusk"

[dependencies]
rusk-core = { workspace = true }
rusk-registry = { workspace = true }
rusk-tuf = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
async-trait = { workspace = true }
url = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
pep440_rs = { workspace = true }
reqwest = { workspace = true }
chrono = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
