[package]
name = "rusk-registry"
version.workspace = true
edition.workspace = true
description = "Registry client abstraction for rusk"

[dependencies]
rusk-core = { workspace = true }
rusk-tuf = { workspace = true }
serde = { workspace = true }
async-trait = { workspace = true }
url = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
