[package]
name = "rusk-resolver"
version.workspace = true
edition.workspace = true
description = "Shared dependency resolver framework for rusk"
license = "Apache-2.0"
repository = "https://github.com/harishsg993010/rusk"

[dependencies]
rusk-core = { workspace = true }
rusk-registry = { workspace = true }
rusk-policy = { workspace = true }
rusk-revocation = { workspace = true }
serde = { workspace = true }
async-trait = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
indexmap = { workspace = true }

semver = { workspace = true }
pep440_rs = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
