[package]
name = "rusk-revocation"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Revocation subsystem for rusk"

[dependencies]
rusk-core = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
