[package]
name = "rusk-signing"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Artifact signature verification for rusk"
repository = "https://github.com/harishsg993010/rusk"

[dependencies]
rusk-core = { workspace = true }
ed25519-dalek = { workspace = true }
p256 = { workspace = true }
signature = { workspace = true }
x509-cert = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
async-trait = { workspace = true }
dashmap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
hex = { workspace = true }
sha2 = { workspace = true }
