[package]
name = "rusk-transport"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "HTTP transport layer with streaming, retries, and mirror support"

[dependencies]
rusk-core = { workspace = true }
rusk-cas = { workspace = true }
reqwest = { workspace = true }
tokio = { workspace = true }
futures = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
url = { workspace = true }
bytes = { workspace = true }
sha2 = { workspace = true }
